--- a/scss/modules/_projects.scss
+++ b/scss/modules/_projects.scss
@@ -18,16 +18,16 @@
 .project-1  {
     width: 367px;
     height: 565px;
-    background: url(../../slava_portfolio/images/chair.jpg) no-repeat top center;
+    background: url(../images/chair.jpg) no-repeat top center;
 }
 .project-2 {
     width: 411px;
     height: 311px;
-    background: url(../../slava_portfolio/images/birds_s.jpg) no-repeat top center;
+    background: url(../images/birds_s.jpg) no-repeat top center;
 }   
 .project-3 {
-    background: url(../../slava_portfolio/images/chair.jpg) no-repeat top center;
+    background: url(../images/chair.jpg) no-repeat top center;
 } 
 .project-4 {
-    background: url(../../slava_portfolio/images/chair.jpg) no-repeat top center;
+    background: url(../images/chair.jpg) no-repeat top center;
 }   
