--- a/css/styles.css
+++ b/css/styles.css
@@ -3344,7 +3344,7 @@ body, html {
   width: 100%;
   height: auto;
   min-height: 800px;
-  background: url(../../slava_portfolio/images/heroimg.jpg) no-repeat top center;
+  background: url(../images/heroimg.jpg) no-repeat top center;
   background-size: cover;
   font-family: Montserrat-light, sans-serif;
 }
@@ -3677,21 +3677,21 @@ body, html {
 .project-1 {
   width: 367px;
   height: 565px;
-  background: url(../../slava_portfolio/images/chair.jpg) no-repeat top center;
+  background: url(../images/chair.jpg) no-repeat top center;
 }
 
 .project-2 {
   width: 411px;
   height: 311px;
-  background: url(../../slava_portfolio/images/birds_s.jpg) no-repeat top center;
+  background: url(../images/birds_s.jpg) no-repeat top center;
 }
 
 .project-3 {
-  background: url(../../slava_portfolio/images/chair.jpg) no-repeat top center;
+  background: url(../images/chair.jpg) no-repeat top center;
 }
 
 .project-4 {
-  background: url(../../slava_portfolio/images/chair.jpg) no-repeat top center;
+  background: url(../images/chair.jpg) no-repeat top center;
 }
 
 @font-face {
