--- a/scss/modules/_about.scss
+++ b/scss/modules/_about.scss
@@ -31,7 +31,12 @@
         top: -7%;
         left: 13%;
         z-index: -1;
+        
+        
     }
+    .col-photo:hover img{
+            transform: translateY(40px);
+        }
     .designer-info {
         padding-top: 118px;
         padding-left: 32px;
@@ -54,11 +59,14 @@
      .link {
            color: $brown;
             position: relative;
+         &:hover {
+             color: $light-brown;
+         }
             }
         }
     }
 }
-@media screen and (max-width: 992px) {
+@media (max-width: 992px) {
     .designer-photo {
       position: relative ;
       top: 25px !important;
