--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -32,7 +32,10 @@
     & a {
     text-decoration: none;
     color: $white;
-    opacity: 0.8;
+    opacity: 0.5;
+    }
+    &:hover a {
+        opacity: 1;
     }
     }
 .footer-socialnets__item:last-child {
