--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -67,6 +67,9 @@
         color: $white;
         text-decoration: none;
         font-size: 16px;   
+       &:hover {
+           text-decoration: underline;
+       }
     }
      
     .social-network {
@@ -91,6 +94,10 @@
         font-family: $montserrat-regular;
         color: $white;
         line-height: 25px;
+        opacity: .7;
+        &:hover {
+            opacity: 1;
+        }
     }
     & i {
         font-size: 25px;
